openapi uri params
